--- a/web/src/app/documents/document-page/document-page.component.html
+++ b/web/src/app/documents/document-page/document-page.component.html
@@ -15,7 +15,13 @@
       </div>
     </div>
   </form>    
-
+  <p-fileUpload name="demo[]" url="./upload.php" (onUpload)="onUpload($event)" accept=".pdf, .gif, .png, .doc" maxFileSize="1000000">
+        <ng-template pTemplate="content">
+          <ul *ngIf="uploadedFiles.length">
+              <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
+          </ul>
+        </ng-template>
+</p-fileUpload>
 
         <p-footer>
             <button type="button" pButton icon="pi pi-close" (click)="display=false" label="Cancel"></button>
