--- a/web/src/app/documents/document-page/document-page.component.html
+++ b/web/src/app/documents/document-page/document-page.component.html
@@ -1,36 +1,34 @@
-<p-dialog header="Document detail" [(visible)]="display" [modal]="true" [responsive]="true" [width]="350" [minWidth]="200" [minY]="70" [maximizable]="true" [baseZIndex]="10000">
+<p-dialog header="Document detail" [(visible)]="display" [modal]="true" [responsive]="true" [minWidth]="200" [minY]="70"
+  [maximizable]="true" [baseZIndex]="10000" (onHide)="cancel()" 
+  appendTo="body">
   <form>
     <div class="form-group">
-      <div class="ui inputgroup">
         <span class="ui-float-label">
-          <input id="docTitle" type="text" pInputText [(ngModel)]="doc.docTitle" name="Titre"> 
-          <label for="float-input">Document title</label>
+          <input [disabled]="!edit" id="docTitle" type="text" pInputText [(ngModel)]="doc.docTitle" name="Titre"> 
+          <label for="docTitle">Document title</label>
       </span>
-      </div>
-      <div class="ui inputgroup">
         <span class="ui-float-label">
-          <input id="docCode" type="text" size="30" pInputText [(ngModel)]="doc.docCode" name="Code"> 
-          <label for="float-input">Document title</label>
+          <input [disabled]="!edit" id="docCode" type="text" size="30" pInputText [(ngModel)]="doc.docCode" name="Code"> 
+          <label for="docCode">Document Code</label>
       </span>
-      </div>
     </div>
   </form>    
-  <p-fileUpload name="demo[]" url="./upload.php" (onUpload)="onUpload($event)" accept=".pdf, .gif, .png, .doc" maxFileSize="1000000">
+  <!-- <p-fileUpload name="demo[]" url="./upload.php" (onUpload)="onUpload($event)" accept=".pdf, .gif, .png, .doc" maxFileSize="1000000">
         <ng-template pTemplate="content">
           <ul *ngIf="uploadedFiles.length">
               <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
           </ul>
         </ng-template>
-</p-fileUpload>
+</p-fileUpload> -->
 
         <p-footer>
-            <button type="button" pButton icon="pi pi-close" (click)="display=false" label="Cancel"></button>
-            <button type="button" pButton icon="pi pi-save" (click)="saveDoc()" label="Save" class="ui-button-secondary"></button>
-            <button type="button" pButton icon="pi pi-pencil" (click)="editDoc=true" label="Edit" class="ui-button-secondary"></button>
+            <button type="button" pButton icon="pi pi-close" (click)="cancel()" label="Cancel"></button>
+            <button [disabled]="!edit" type="button" pButton icon="pi pi-save" (click)="saveDoc()" label="Save" class="ui-button-secondary"></button>
+            <button [disabled]="edit" type="button" pButton icon="pi pi-pencil" (click)="editDoc()" label="Edit" class="ui-button-secondary"></button>
             <button type="button" pButton icon="pi pi-trash" (click)="deleteDoc()" label="Delete" class="ui-button-danger"></button>
-            <button type="button" pButton icon="pi-angle-double-left" (click)="firstSelectedDoc()" label="First" class="ui-button-secondary"></button>
-            <button type="button" pButton icon="pi-angle-double-right" (click)="lastSelectedDoc()" label="Last" class="ui-button-secondary"></button>
-            <button type="button" pButton icon="pi-angle-left" (click)="previusSelectedDoc()" label="Previus" class="ui-button-secondary"></button>
-            <button type="button" pButton icon="pi-angle-right" (click)="nextSelectedDoc()" label="Next" class="ui-button-secondary"></button>
+            <button type="button" pButton icon="pi pi-angle-double-left" (click)="firstSelectedDoc()" label="First" class="ui-button-secondary"></button>
+            <button type="button" pButton icon="pi pi-angle-double-right" (click)="lastSelectedDoc()" label="Last" class="ui-button-secondary"></button>
+            <button type="button" pButton icon="pi pi-angle-left" (click)="previousSelectedDoc()" label="Previous" class="ui-button-secondary"></button>
+            <button type="button" pButton icon="pi pi-angle-right" (click)="nextSelectedDoc()" label="Next" class="ui-button-secondary"></button>
         </p-footer>
 </p-dialog>
