Edit and delete implemented

--- a/web/src/app/documents/document-list/document-list.component.html
+++ b/web/src/app/documents/document-list/document-list.component.html
@@ -86,7 +86,7 @@
                 </p-table>
             </div>
             
-            <app-document-page [(display)]=display [doc$]="doc$" [(edit)]="editMode"></app-document-page>
+            <app-document-page (display)="display" [display]="display && selectedDocs.length !== 0" [doc$]="doc$" [(edit)]="editMode" (refresh)="refresh()"></app-document-page>
         </div>
     </div>
 </div>
