--- a/web/src/app/documents/document-list/document-list.component.html
+++ b/web/src/app/documents/document-list/document-list.component.html
@@ -1,96 +1,101 @@
-<div class="ui-g">
-    <div class="ui-g-12">
-        <div class="card">
-            <div class="ui-g-12">
-                <p-table #dt [columns]="cols" [value]="docs" [paginator]="true" [rows]="10" 
-                    [(selection)]="selectedDocs" dataKey="ID" sortMode="multiple">
-                <ng-template pTemplate="caption">
-                    Liste de Documents
-                    <p-toolbar>
-                            <div class="ui-toolbar-group-left">
-                                <button pButton type="button" label="Add" icon="fa fa-plus" (click)="addNewDoc()" ></button>
-                                <button 
-                                    pButton type="button" label="Vue" icon="fa fa-eye" class="ui-button-success" (click)="viewSelectedDocs()" 
-                                    [disabled]="selectedDocs.length === 0">
-                                </button>
-                                <button pButton type="button" label="Edit" [disabled]="!editDoc"  icon="far fa-edit" class="ui-button-warning" (click)="editSelectedDocs()"></button>
-                                <button pButton type="button" label="Print" icon="fa fa-print" class="ui-button-info" (click)="printSelectedDocs()"></button>
+<ng-container *ngIf="!display">
+    <div class="ui-g">
+        <div class="ui-g-12">
+            <div class="card">
+                <div class="ui-g-12">
+                    <p-table #dt [columns]="cols" [value]="docs" [paginator]="true" [rows]="10" 
+                        [(selection)]="selectedDocs" dataKey="ID" sortMode="multiple">
+                    <ng-template pTemplate="caption">
+                        Liste de Documents
+                        <p-toolbar>
+                                <div class="ui-toolbar-group-left">
+                                    <button pButton type="button" label="Add" icon="fa fa-plus" (click)="addNewDoc()" ></button>
+                                    <button 
+                                        pButton type="button" label="Vue" icon="fa fa-eye" class="ui-button-success" (click)="viewSelectedDocs()" 
+                                        [disabled]="selectedDocs.length === 0">
+                                    </button>
+                                    <button pButton type="button" label="Edit" [disabled]="!editDoc"  icon="far fa-edit" class="ui-button-warning" (click)="editSelectedDocs()"></button>
+                                    <button pButton type="button" label="Print" icon="fa fa-print" class="ui-button-info" (click)="printSelectedDocs()"></button>
+                                        
+                                    <i class="pi pi-bars"></i>
+    
+                                    <button pButton type="button" icon="pi pi-search"></button>
+                                    <input type="text" pInputText size="50" placeholder="Global Filter" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:150px">
                                     
-                                <i class="pi pi-bars"></i>
-
-                                <button pButton type="button" icon="pi pi-search"></button>
-                                <input type="text" pInputText size="50" placeholder="Global Filter" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:150px">
+                                    <i class="pi pi-bars"></i>
+    
+                                    <p-splitButton label="Export" icon="fas fa-download" [model]="items"></p-splitButton>
+                                    <button type="button" pButton icon="fas fa-file" iconPos="left" label="All Data" (click)="dt.exportCSV()" class="ui-button-secondary"></button>
+                                    <button type="button" pButton icon="far fa-file" iconPos="left" label="Selection Only" (click)="dt.exportCSV({selectionOnly:true})" class="ui-button-secondary"></button>
+    
+                                </div>
                                 
-                                <i class="pi pi-bars"></i>
-
-                                <p-splitButton label="Export" icon="fas fa-download" [model]="items"></p-splitButton>
-                                <button type="button" pButton icon="fas fa-file" iconPos="left" label="All Data" (click)="dt.exportCSV()" class="ui-button-secondary"></button>
-                                <button type="button" pButton icon="far fa-file" iconPos="left" label="Selection Only" (click)="dt.exportCSV({selectionOnly:true})" class="ui-button-secondary"></button>
-
-                            </div>
-                            
-                            <div class="ui-toolbar-group-right">    
-                                <button pButton type="button" label="Delete" [disabled]="!deleteDoc" icon="far fa-trash-alt" Class="ui-button-danger" (click)="deleteSelectedDocs()"></button>
-                            </div>
-                        </p-toolbar>
-                </ng-template>
-                <ng-template pTemplate="header" let-columns >
-                    <tr>
-                        <th style="width: 2.25em">
-                                <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-                        </th>
-                        <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-                            {{col.header}}
-                            <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th>
-                            <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-                        </th>
-                        <th *ngFor="let col of columns" [ngSwitch]="col.field">
-                            <input *ngSwitchCase="'docTitle'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
-                            <input *ngSwitchCase="'docCode'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
-                            <input *ngSwitchCase="'ID'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
-                        </th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-rowData let-columns="columns">
-                    <tr [pSelectableRow]="rowData">
-                        <td>
-                                <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
-                        </td>
-                        <td *ngFor="let col of columns">
-                        {{rowData[col.field]}}
-                        </td>               
-                    </tr>
-                </ng-template>
-               
-                <ng-template pTemplate="summary">
-                    <span>
-                        Il y a {{docs?.length}} documents.
-                    </span>
-                    <span>
-                        dont {{selectedDocs?.length}} sélectionné(s).
-                    </span>
-                    <ul>
-                            <li *ngFor="let doc of selectedDocs" style="text-align: left">
-                                {{doc.ID + ' - ' + doc.docTitle + ' - ' + doc.docCode }}
-                            </li>
-                        </ul>
-                        <div class="ui-helper-clearfix">
-                                <button type="button" pButton icon="fas fa-file" iconPos="left" label="All Data" (click)="dt.exportCSV()" style="float:left"></button>
-                                <button type="button" pButton icon="far fa-file" iconPos="left" label="Selection Only" (click)="dt.exportCSV({selectionOnly:true})" style="float:right"></button>
-                            </div>
-                </ng-template>
-                </p-table>
+                                <div class="ui-toolbar-group-right">    
+                                    <button pButton type="button" label="Delete" [disabled]="!deleteDoc" icon="far fa-trash-alt" Class="ui-button-danger" (click)="deleteSelectedDocs()"></button>
+                                </div>
+                            </p-toolbar>
+                    </ng-template>
+                    <ng-template pTemplate="header" let-columns >
+                        <tr>
+                            <th style="width: 2.25em">
+                                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                            </th>
+                            <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                                {{col.header}}
+                                <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+                                <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+                            </th>
+                            <th *ngFor="let col of columns" [ngSwitch]="col.field">
+                                <input *ngSwitchCase="'docTitle'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
+                                <input *ngSwitchCase="'docCode'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
+                                <input *ngSwitchCase="'ID'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
+                            </th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-rowData let-columns="columns">
+                        <tr [pSelectableRow]="rowData">
+                            <td>
+                                    <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
+                            </td>
+                            <td *ngFor="let col of columns">
+                            {{rowData[col.field]}}
+                            </td>               
+                        </tr>
+                    </ng-template>
+                   
+                    <ng-template pTemplate="summary">
+                        <span>
+                            Il y a {{docs?.length}} documents.
+                        </span>
+                        <span>
+                            dont {{selectedDocs?.length}} sélectionné(s).
+                        </span>
+                        <ul>
+                                <li *ngFor="let doc of selectedDocs" style="text-align: left">
+                                    {{doc.ID + ' - ' + doc.docTitle + ' - ' + doc.docCode }}
+                                </li>
+                            </ul>
+                            <div class="ui-helper-clearfix">
+                                    <button type="button" pButton icon="fas fa-file" iconPos="left" label="All Data" (click)="dt.exportCSV()" style="float:left"></button>
+                                    <button type="button" pButton icon="far fa-file" iconPos="left" label="Selection Only" (click)="dt.exportCSV({selectionOnly:true})" style="float:right"></button>
+                                </div>
+                    </ng-template>
+                    </p-table>
+                </div>
             </div>
-            
-            <app-document-page 
-                (displayChange)="displayChange($event)" 
-                [display]="display && selectedDocs.length !== 0" [doc$]="doc$" [(edit)]="editMode" (refresh)="refresh()">
-            </app-document-page>
         </div>
     </div>
-</div>
+</ng-container>
+
+
+<ng-container *ngIf="display">
+    <app-document-page 
+                (displayChange)="displayChange($event)" 
+                [display]="display && selectedDocs.length !== 0" [doc$]="doc$" [(edit)]="editMode" (refresh)="refresh()">
+    </app-document-page>
+</ng-container>
 
