--- a/web/src/app/documents/document-page/document-page.component.html
+++ b/web/src/app/documents/document-page/document-page.component.html
@@ -20,7 +20,8 @@
 
         </form>
         
-        <!-- <p-fileUpload mode="basic" name="demo[]" url="./upload.php" accept=".pdf" maxFileSize="1000000" (onUpload)="onBasicUpload($event)"></p-fileUpload> -->
+        <p-fileUpload mode="basic" method="POST" name="demo[]" url="/api/uploaddocument" accept=".pdf" maxFileSize="1000000">
+        </p-fileUpload>
         
         <!-- <p-fileUpload name="demo[]" url="" (onUpload)="onUpload($event)" accept=".pdf, .gif, .png, .doc" maxFileSize="1000000">
           <ng-template pTemplate="content">
